# c2ImageD11

./: .gitignore  .gitmodules  AGENTS.md  AGENTS_polyglot.md  LICENSE  MANIFEST.in  PHASE_X_PLAN.md  PLAN.md  README.md  _cImageD11.c2py  _cImageD11_base.c2py  _cImageD11_bslz4.c2py  c2py23_requests.md  generate_bslz4.py  get_chunk_offsets.py  multi_bslz4.md  pyproject.toml  pyrightconfig.json  run_ci.sh  run_ci_all.sh  setup.py
.githooks/: check_all_pythons.sh  pre-commit  pre-push
c2ImageD11/: __init__.py  _constants.py  bslz4.py  csc_convert.py
docs/: AGENTS.md  const_review.md  index.md  mkdocs.yml  restructure_plan.md
interface/: _cImageD11_base.c2py  _cImageD11_bslz4.c2py
lib/: meson.build  meson_options.txt
lib/functions/array_histogram/: array_histogram.c
lib/functions/array_mean_var_cut/: array_mean_var_cut.c
lib/functions/array_mean_var_msk/: array_mean_var_msk.c
lib/functions/array_stats/: array_stats.c
lib/functions/bgcalc/: bgcalc.c
lib/functions/blob_moments/: blob_moments.c
lib/functions/bloboverlaps/: bloboverlaps.c
lib/functions/blobproperties/: blobproperties.c
lib/functions/clean_mask/: clean_mask.c
lib/functions/closest/: closest.c
lib/functions/closest_vec/: closest_vec.c
lib/functions/cluster1d/: cluster1d.c
lib/functions/common/: ImageD11_cmath.h  blobs.c  blobs.h  cImageD11.h  cimaged11utils.c  cimaged11utils.h  config.c
lib/functions/compress_duplicates/: compress_duplicates.c
lib/functions/compute_geometry/: compute_geometry.c  compute_geometry_f32.c
lib/functions/compute_gv/: compute_gv.c  compute_gv_f32.c
lib/functions/compute_xlylzl/: compute_xlylzl.c
lib/functions/compute_xlylzl_xpos_variable/: compute_xlylzl_xpos_variable.c
lib/functions/connectedpixels/: connectedpixels.c
lib/functions/count_shared/: count_shared.c
lib/functions/coverlaps/: coverlaps.c
lib/functions/frelon_lines/: frelon_lines.c
lib/functions/frelon_lines_sub/: frelon_lines_sub.c
lib/functions/localmaxlabel/: localmaxlabel.c
lib/functions/make_clean_mask/: make_clean_mask.c
lib/functions/mask_to_coo/: mask_to_coo.c
lib/functions/misori_cubic/: misori_cubic.c
lib/functions/misori_monoclinic/: misori_monoclinic.c
lib/functions/misori_orthorhombic/: misori_orthorhombic.c
lib/functions/misori_tetragonal/: misori_tetragonal.c
lib/functions/put_incr32/: put_incr32.c
lib/functions/put_incr64/: put_incr64.c
lib/functions/quickorient/: quickorient.c
lib/functions/refine_assigned/: refine_assigned.c
lib/functions/reorder_f32_a32/: reorder_f32_a32.c
lib/functions/reorder_u16_a32/: reorder_u16_a32.c
lib/functions/reorder_u16_a32_a16/: reorder_u16_a32_a16.c
lib/functions/reorderlut_f32_a32/: reorderlut_f32_a32.c
lib/functions/reorderlut_u16_a32/: reorderlut_u16_a32.c
lib/functions/score/: bench.py  score.c  score_f32_avx2.c  score_f32_avx512.c  score_f32_soa_avx2.c  score_f32_soa_avx512.c  score_f64_avx2.c  score_f64_avx512.c  score_f64_soa_avx2.c  score_f64_soa_avx512.c  score_fallback.h  score_stubs.c
lib/functions/score_and_assign/: bench.py  sa_f32_aos_avx2.c  sa_f32_aos_avx512.c  sa_f32_aos_avx512_v2.c  sa_f32_sov_avx2.c  sa_f32_sov_avx2_asm.c  sa_f32_sov_avx512.c  sa_f32_sov_avx512_asm.c  sa_f64_aos_avx2.c  sa_f64_aos_avx512.c  sa_f64_aos_avx512_v2.c  sa_f64_sov_avx2.c  sa_f64_sov_avx2_asm.c  sa_f64_sov_avx512.c  sa_f64_sov_avx512_asm.c  sa_stubs.c  score_and_assign.c  test_correctness.py
lib/functions/score_and_assign/asm/: c2_abi.asm  sa_f32_sov_avx2.asm  sa_f32_sov_avx512.asm  sa_f64_sov_avx2.asm  sa_f64_sov_avx512.asm
lib/functions/score_and_refine/: README.md  bench.py  check_accuracy.py  measure_flags.py  sar_f32_aos_avx2.c  sar_f32_aos_avx512.c  sar_f32_soa_avx2.c  sar_f32_soa_avx512.c  sar_f64_aos_avx2.c  sar_f64_aos_avx512.c  sar_f64_soa_avx2.c  sar_f64_soa_avx512.c  sar_omp.h  sar_popcnt.h  score_and_refine.c  score_and_refine.hpp  score_and_refine_f32.cpp  score_and_refine_f32_avx2.cpp  score_and_refine_f32_avx512.cpp  score_and_refine_f32_soa.cpp  score_and_refine_f32_soa_avx2.cpp  score_and_refine_f32_soa_avx512.cpp  score_and_refine_f32_soa_sse41.cpp  score_and_refine_f32_sse41.cpp  score_and_refine_f64.cpp  score_and_refine_f64_avx2.cpp  score_and_refine_f64_avx512.cpp  score_and_refine_f64_soa.cpp  score_and_refine_f64_soa_avx2.cpp  score_and_refine_f64_soa_avx512.cpp  score_and_refine_f64_soa_sse41.cpp  score_and_refine_f64_sse41.cpp  test_data.py
lib/functions/score_gvec_z/: score_gvec_z.c
lib/functions/sparse_blob2Dproperties/: sparse_blob2Dproperties.c
lib/functions/sparse_connectedpixels/: sparse_connectedpixels.c
lib/functions/sparse_connectedpixels_splat/: sparse_connectedpixels_splat.c
lib/functions/sparse_is_sorted/: sparse_is_sorted.c
lib/functions/sparse_localmaxlabel/: sparse_localmaxlabel.c
lib/functions/sparse_overlaps/: sparse_overlaps.c
lib/functions/sparse_smooth/: sparse_smooth.c
lib/functions/splat/: splat.c
lib/functions/tosparse_f32/: tosparse_f32.c
lib/functions/tosparse_u16/: tosparse_u16.c
lib/functions/tosparse_u32/: tosparse_u32.c
lib/functions/uint16_to_float_darkflm/: uint16_to_float_darkflm.c
lib/functions/uint16_to_float_darksub/: uint16_to_float_darksub.c
lib/interface/: _cImageD11.c2py  _cImageD11_base.c2py  _cImageD11_bslz4.c2py  _cImageD11_wrapper.c  c2py_runtime.h
lib/src/bslz4/: bs_master.c  bs_sparse_csc_1d_tmpl.c  bs_sparse_tmpl.c
lib/src/core/: cImageD11.h  cimaged11utils.c
lib/src/geometry/: cdiffraction.c  cdiffraction.h  closest.c
lib/src/geometry/simd/: compute_xlylzl_kernel.c  score_and_assign_kernel.c
lib/src/imageproc/: connectedpixels.c  darkflat.c  localmaxlabel.c  sparse_image.c  splat.c
lib/src/imageproc/simd/: darksub_kernel.c  put_incr64_kernel.c  reorder_f32_a32_kernel.c  reorder_u16_a32_kernel.c  reorderlut_f32_a32_kernel.c
src/: blobs.c  bs_functions.h  bs_master.c  bs_sparse_csc_1d_tmpl.c  bs_sparse_csc_tmpl.c  bs_sparse_tmpl.c  bshuf.c  bshufdot.c  bslz4_functions.h  bslz4_to_sparse.c  cdiffraction.c  cdiffraction.h  closest.c  connectedpixels.c  darkflat.c
src_simd/: score_kernel.c  (+6 more)
(+87 files in other folders)
