[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "c2ImageD11"
version = "0.2.0"
description = "C extensions for ImageD11 (c2py23 binding)"
authors = [{name = "Jon Wright", email = "wright@esrf.fr"}]
requires-python = ">=2.7"
dependencies = [
    "numpy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
